@@ -37,6 +37,8 @@ Minor changes:
    God. [SW]
  * regmatch() now returns an error for invalid regexps, whether you're
    storing subpattern matches or not. Reported by Sketch. [MG]
+ * Commands involving movement now check the enactor is a player/thing,
+   instead of just relying on the command's restriction. [MG]
 
 Version 1.8.5 patchlevel 0                                 Feb 12, 2012
 
